Add CuddlyToys handler
